hphp/hack/test/typecheck/array/disallow_two_type_parameters_for_varray.php.exp
File "disallow_two_type_parameters_for_varray.php", line 3, characters 18-23:
Too many type arguments for this type (Naming[2065])
